test: fix mock parser